src/test/resources/scripts/language/parser/valid/binary/boolean/and.sbsc
assert(true && true);

a = true && false;

assert(!a);

b = false && true;

assert(!b);

return true;