src/test/resources/scripts/language/parser/invalid/ifWithoutElse.sbsc
if(true) "a";

return true;